[tool.poetry]
package-mode = false
[project]
name = "dz"
version = "0.1.0"
description = ""
authors = [
    {name = "skip"}
]
requires-python = ">=3.14"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 >=7.3.0,<8.0.0",
    "black >=26.3.1,<27.0.0",
    "isort >=8.0.1,<9.0.0",
    "mypy >=1.19.1,<2.0.0"
]
dev = [
    "pytest >=9.0.3"
]

[tool.black]
line-length = 119
exclude = '''
(
  /(\.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
)
'''


[tool.isort]
profile = 'black'
line_length = 119
known_first_party = ['src']

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
warn_return_any = true
exclude = 'venv'

